--- a/style.css
+++ b/style.css
@@ -1,53 +1,53 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
-body{
-    background: linear-gradient(to right,#9ADCFF,#488FB1,#FF9F45);
+body {
+  background: linear-gradient(to right, #9adcff, #488fb1, #ff9f45);
 }
-.poke-container{
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
+.poke-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
 }
-.pokemon{
-    margin: 0.5rem;
-    border-radius: 10px;
+.pokemon {
+  margin: 0.5rem;
+  border-radius: 10px;
 }
-.img{
-    width: 180px;
-    background-color: white;
-    border-radius: 50%;
-    margin: 1rem;
+.img {
+  width: 180px;
+  background-color: white;
+  border-radius: 50%;
+  margin: 1rem;
 }
-.img img{
-    width: 90%;
-    padding: 1rem;
-    margin: 0 10px;
+.img img {
+  width: 90%;
+  padding: 1rem;
+  margin: 0 10px;
 }
-.info{
-    flex-direction: column;
-    display: flex;
-    align-items: center;
-    padding: 0.5rem;
+.info {
+  flex-direction: column;
+  display: flex;
+  align-items: center;
+  padding: 0.5rem;
 }
-.info .type{
-    padding: 0.5rem;
+.info .type {
+  padding: 0.5rem;
 }
-.info .name{
-    padding-top: 0.5rem;
+.info .name {
+  padding-top: 0.5rem;
 }
-.info .id{
-    background-color: white;
-    border-radius: 5px;
-    padding: 0.12rem 0.4rem;
-    font-weight: bold;
+.info .id {
+  background-color: white;
+  border-radius: 5px;
+  padding: 0.12rem 0.4rem;
+  font-weight: bold;
 }
-.pokedex{
-    display: flex;
-    justify-content: center;
-    margin: 2rem;
-    color: blue;
+.pokedex {
+  display: flex;
+  justify-content: center;
+  margin: 2rem;
+  color: blue;
 }
