--- a/style.css
+++ b/style.css
@@ -10,7 +10,8 @@ body {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  align-items: center;
+  /* align-items: center; */
+  max-width: 1200px;
 }
 .pokemon {
   margin: 0.5rem;
@@ -23,7 +24,7 @@ body {
   margin: 1rem;
 }
 .img img {
-  width: 90%;
+  width: 100%;
   padding: 1rem;
   margin: 0 10px;
 }
